--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Susan Maina's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/suemnjeri/Resume/raw/main/Susan%20N%20Maina%20Data%20Scientist%20CV%202.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/suemnjeri/Resume/blob/main/SUSAN%20MAINA%20Python%20Developer%20CV3.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
